--- a/autodonate_bulma_theme/templates/bulma/pages/index.html
+++ b/autodonate_bulma_theme/templates/bulma/pages/index.html
@@ -5,7 +5,7 @@
     <div class="hero-body">
       <div class="container">
         <div class="columns">
-          <div class="column is-two-fifths is-align-items-center">
+          <div class="column is-two-fifths hero-h1">
             <p class="title is-1 has-text-white">Ваш лучший сервер</p>
             <p class="subtitle has-text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               In nulla quam, gravida eget eros at, scelerisque vulputate erat.</p>
